--- a/test_task_flutter/pubspec.yaml
+++ b/test_task_flutter/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: any
+  provider: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
